# NeverChopped

./: .gitignore  CHANGELOG.md  LiveViewVisualizerRevamp.md  OUTSTANDING_TASKS.md  README.md  agents.md  agents2.md  dev.sh  espn-api-server.cjs  index.html  nohup.out  package-lock.json  package.json  pyespntester.py  requirements.txt  setup-network.sh  sleeper_ff_helper.tsx  sleeper_graphql_schema.json  tester.py  vite.config.ts
docs/pyespn-source-code/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
docs/pyespn-source-code/docs/: api_endpoints.md  discover.md  exceptions.md  index.md  installing.md  postman.md  pyespn.md  sports_available.md  use.md
docs/pyespn-source-code/docs/classes/: bet_value_class.md  betting_class.md  broadcast_class.md  circuit_class.md  competition_class.md  depth_chart_class.md  draft_class.md  drive_class.md  event_class.md  game_odds_class.md  image_class.md  leader_category_class.md  leader_class.md  league_class.md  line_class.md  line_score_class.md  manufacturer_class.md  odds_bet365_class.md  odds_class.md  odds_type_class.md  official_class.md  play_class.md  player_class.md  position_class.md  record_class.md  recruit_class.md  schedule_class.md  score_class.md  standings_class.md  stat_class.md  teams_class.md  vehicle_class.md  venue_class.md  (+1 more)
docs/pyespn-source-code/tests/: test_nba.py  test_nfl.py
docs/pyespn-source-code/to_rebuilt_tests/: not_test_nba_awards.py  test_cfb_draft.py  test_cfb_events.py  test_cfb_fails.py  test_cfb_players.py  test_f1.py
(+228 files in other folders)
